Web Inspector: Fix ObjectTree Map styling, key/value look cramped https://bugs.webkit.org/show_bug.cgi?id=155668
Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-03-18
Reviewed by Timothy Hatcher.

* UserInterface/Views/ObjectTreeArrayIndexTreeElement.css:
(.tree-outline .item.object-tree-array-index):
* UserInterface/Views/ObjectTreeMapEntryTreeElement.css:
(.tree-outline .item.object-tree-map-entry):
When creating generic tree outline styles generic object tree
styles were getting overriden by generic tree outline styles
with higher specificity.

Canonical link: https://commits.webkit.org/173780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198452 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/ObjectTreeArrayIndexTreeElement.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ObjectTreeArrayIndexTreeElement.css
@@ -23,7 +23,7 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-.object-tree-array-index {
+.tree-outline .item.object-tree-array-index {
     position: relative;
     left: -12px;
     margin-top: 2px;
